# alpha-project

./: .dockerignore  .gitignore  .worktreeinclude  CLAUDE.md  Dockerfile  LEARNINGS.md  README.md  docker-compose.yml  start.sh
.claude/: lesson14-skills-deep-dive.html
.claude/mcp/muyu-search-mcp/: README.md  pyproject.toml
.claude/mcp/muyu-search-mcp/src/muyu_search/: config.py  logger.py  planning.py  server.py  setup_wizard.py  sources.py  utils.py
.claude/mcp/muyu-search-mcp/src/muyu_search/providers/: __init__.py  base.py  grok.py
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
app/: database.py  dependencies.py  main.py
app/models/: __init__.py  group.py  stock.py  watchlist.py
app/routers/: groups.py  import_export.py  watchlist.py
app/schemas/: __init__.py  stock.py  watchlist.py
app/services/: __init__.py  csv_export.py  csv_import.py  group_service.py  stock_search.py
app/templates/: base.html
backend/: __init__.py  config.py  database.py  dependencies.py  main.py  requirement.txt  requirements.txt  setup.sh
backend/app/: config.py  database.py  dependencies.py  main.py
backend/models/: __init__.py  group.py  stock.py  watchlist.py
backend/routers/: groups.py  import_export.py  watchlist.py
backend/schemas/: __init__.py  group.py  stock.py  (+1 more)
design-reference/: DESIGN.md
infrastructure/: .env.example  Dockerfile  docker-compose.yml
specs/: prd.md
tests/: conftest.py
(+344 files in other folders)
