[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "muyu-search-mcp"
version = "0.1.0"
description = "MuYu Search MCP — Grok (via OpenRouter) + Tavily/Firecrawl, for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.3.0",
    "httpx[socks]>=0.28.0",
    "mcp[cli]>=1.21.2",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
setup = [
    "questionary>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
muyu-search = "muyu_search.server:main"
muyu-search-setup = "muyu_search.setup_wizard:main"
